# nzihl-season-data

./: .gitignore  README.md  cursor.json  memory.md  nzihl.json  nzwihl.json  pyproject.toml
.github/workflows/: build.yml
src/nzihl_season/: cli.py  derived.py  discovery.py  game.py  http.py  parser.py  standings.py  teams.py  upcoming.py
tests/: test_derived.py  test_discovery.py  test_parser.py  test_standings.py  test_upcoming.py
tests/fixtures/: nzihl_2519940.html  nzihl_2519941_ot.html  nzihl_2519942.html  nzwihl_2520001.html  nzwihl_2520003.html  nzwihl_2520008.html  nzwihl_2520016.html  schedule_min.html  standings_nzihl.html  standings_nzwihl.html
